--- a/51-quality-measures.qmd
+++ b/51-quality-measures.qmd
@@ -23,7 +23,7 @@ It indicates that the seasonal adjustment may not have fully removed all the sea
 If residual seasonality is present in the adjusted series, it can lead to biased or misleading analysis and forecasts.
 It implies that there are still systematic patterns or cycles left in the data, which can hinder accurate interpretation and decision-making.
 There are many ways to test for residual seasonality.
-Three prominent ones are 
+Three prominent ones are
 
 <!-- (I THINK THIS IS A GOOD PLACE TO ADD A REFERENCE TABLE THAT LISTS THESE THREE METHODS ALONG WITH PROS, CONS, IMMEDIATE INTERPRETATIONS. I THINK MANY READERS WILL JUST WANT TO KNOW HOW TO IDENTIFY RESIDUAL SEASONALITY AND MATCH UP A TEST WITH THEIR SKILL-SET AND THEN SEE HOW TO APPLY IT) -->
 
@@ -66,16 +66,16 @@ spec.ar(final(m))
 Here we see peaks remaining the the final seasonal adjustment.
 This is a clear indication of lack of quality and something needs to be done to improve the adjustment.
 
-When attempting to eliminate persistent peaks in the spectrum, several strategies can be employed. 
-First, consider adjusting the model span, particularly when there are indications of changing patterns. 
-Furthermore, it is essential to carefully examine for any missed outliers and thoroughly review instances that are considered "almost" outliers. 
-Additionally, scrutinize the seasonal filters and sigma limits in X-11 or the model in SEATS to ensure they are appropriately set. 
+When attempting to eliminate persistent peaks in the spectrum, several strategies can be employed.
+First, consider adjusting the model span, particularly when there are indications of changing patterns.
+Furthermore, it is essential to carefully examine for any missed outliers and thoroughly review instances that are considered "almost" outliers.
+Additionally, scrutinize the seasonal filters and sigma limits in X-11 or the model in SEATS to ensure they are appropriately set.
 Exploring different estimations of the spectrum can also provide insights into potential solutions.
 Here we used the `spec.ar` function which utilizes an AIC test to find an appropriate AR(p) model for the series and plots the associated spectrum.
 This results in a smooth function as apposed to say, `spec.pgram` which will be much rougher.
 It is important to acknowledge that sometimes these peaks may be spurious, making it challenging to ascertain their significance.
 Always try to eliminate peaks at 1/12, 2/12, 3/12, 4/12, or TD 0.348 but be aware that not every situation lends itself to a clear-cut answer.
-When employing X-11 seasonal adjustment, it is crucial to consider that peaks observed in the spectrum of the seasonally adjusted series or irregular component, these are more significance than peaks in the spectrum of the model residuals. 
+When employing X-11 seasonal adjustment, it is crucial to consider that peaks observed in the spectrum of the seasonally adjusted series or irregular component, these are more significance than peaks in the spectrum of the model residuals.
 In the case of indirect adjustments, it is advisable to prioritize the analysis of the seasonally adjusted series.
 
 ### QS statistc
@@ -99,36 +99,42 @@ qs(m)
 
 In the output table we see 14 rows.
 The top 7 rows correspond to the QS statistic
-1. Original series 
-1. Original series, adjusted for extreme values 
-1. Model residuals
-1. Seasonally adjusted series 
-1. Seasonally adjusted series, adjusted for extreme values
-1. Irregular series 
-1. Irregular series, adjusted for extreme values
-The next seven rows are simply the exact same statistics calculated on a (possibly) shorter span of the data. 
+
+1.  Original series
+
+2.  Original series, adjusted for extreme values
+
+3.  Model residuals
+
+4.  Seasonally adjusted series
+
+5.  Seasonally adjusted series, adjusted for extreme values
+
+6.  Irregular series
+
+7.  Irregular series, adjusted for extreme values
+
+The next seven rows are simply the exact same statistics calculated on a (possibly) shorter span of the data.
 The default span used for the second 7 QS statistics is set to be the same as the spectrum uses, 96 observations or 8 years in a monthly series.
 
 ## Stability and smoothness
 
 We explore two related concepts and their associated specs.
-First, the stability of a seasonal adjustment which refers to its consistency and reliability over time. 
+First, the stability of a seasonal adjustment which refers to its consistency and reliability over time.
 It assesses whether the model fits remain consistent as new data becomes available.
 Stability is important as large revisions are a hindrance in a production cycle of seasonal adjustment.
-Again, this is a good example of a situation where a user interested in only a single seasonal adjustment (will never adjust this series again) may not care to read this section. 
+Again, this is a good example of a situation where a user interested in only a single seasonal adjustment (will never adjust this series again) may not care to read this section.
 The diagnostics provided in other chapters will more adequately aid them to produce a quality seasonal adjustment.
-However, for those that produce a seasonal adjustment, say monthly, stability is crucial for producing consistent and trustworthy data that can be used for analysis, decision-making, and forecasting. 
+However, for those that produce a seasonal adjustment, say monthly, stability is crucial for producing consistent and trustworthy data that can be used for analysis, decision-making, and forecasting.
 This is discussed in the following subsection.
 
-Secondly, in the following chapter, we will discuss the history spec and revisions. 
-
-
+Secondly, in the following chapter, we will discuss the history spec and revisions.
 
 ### Sliding spans
 
-The sliding span spec and diagnostics provide descriptive information about how seasonal adjustments and their month-to-month changes vary when the data span used to calculate them is changed systematically. 
-Quoting the seminal paper (Findley, et al 1990) "A minimal requirement of the output of any smoothing or adjustment procedure is stability: Appending or deleting a small number of series values should not substantially change the smoothed values-otherwise, what reliable interpretation can they have?"
-When comparing two neighboring spans, the extent of their differences depends on whether one starts and ends a year later than the other. The default length of the data span is determined by the length of the seasonal filter used for the adjustment. 
+The sliding span spec and diagnostics provide descriptive information about how seasonal adjustments and their month-to-month changes vary when the data span used to calculate them is changed systematically.
+Quoting the seminal paper (Findley, et al 1990) "A minimal requirement of the output of any smoothing or adjustment procedure is stability: Appending or deleting a small number of series values should not substantially change the smoothed values-otherwise, what reliable interpretation can they have?" When comparing two neighboring spans, the extent of their differences depends on whether one starts and ends a year later than the other.
+The default length of the data span is determined by the length of the seasonal filter used for the adjustment.
 
 ```{mermaid}
 gantt
@@ -141,29 +147,31 @@ gantt
     Fourth Span :a4, 2003-01-01, 2920d
 ```
 
-
-For series where all seasonally adjusted values are positive, two important sliding spans statistics, A(%) and MM(%), are viewed as follows. Let $A_t^{(j)}$ be the seasonally adjusted value at time $t$ calculated from data in span $j$. Then A(%) denotes the percent of month such that:
-$$
+For series where all seasonally adjusted values are positive, two important sliding spans statistics, A(%) and MM(%), are viewed as follows.
+Let $A_t^{(j)}$ be the seasonally adjusted value at time $t$ calculated from data in span $j$.
+Then A(%) denotes the percent of month such that: $$
 \frac{\max_j A_t^{(j)} - \min_j A_t^{(j)}}{\min_j A_t^{(j)}} > .03
-$$
-MM(%) denotes the percent of months the seasonally adjusted month-to-month percent change" is unstable, which is defined as:
-$$
+$$ MM(%) denotes the percent of months the seasonally adjusted month-to-month percent change" is unstable, which is defined as: $$
 \max_j \frac{A_t^{(j)}}{A_{t-1}^{(j)}} - 
 \min_j \frac{A_t^{(j)}}{A_{t-1}^{(j)}} > 0.03
 $$
 
-The 0.03 on the right hand side comes from the default cutoff. 
+The 0.03 on the right hand side comes from the default cutoff.
 Some of the other defaults are as follows
 
 | Series                                          | Default cutoff | spec option     |
-|-------------------------------------------------|----------------|-----------------|
-| Seasonal factors and seasonally adjusted series | 3\%             | `cutseas = 3.0` |
-| month-to-month and year-to-year change          | 3\%             | `cutchng = 3.0` |
-| trading day factors                             | 2\%             | `cuttd = 2.0`   |
+|----------------------------------------|----------------|----------------|
+| Seasonal factors and seasonally adjusted series | 3%             | `cutseas = 3.0` |
+| month-to-month and year-to-year change          | 3%             | `cutchng = 3.0` |
+| trading day factors                             | 2%             | `cuttd = 2.0`   |
 
-The recommendation provided in the X13 manual indicate A(%) > 15 is problematic and A(%) > 25 should not be used. MM(%) > 35 is problematic and MM(%) > 40 should not be used. 
+The recommendation provided in the X13 manual indicate A(%) \> 15 is problematic and A(%) \> 25 should not be used.
+MM(%) \> 35 is problematic and MM(%) \> 40 should not be used.
 Why a different ranges?
-Sometimes, the causes of high values in A(%) or MM(%) can be identified and determined to be relatively unproblematic. This is particularly true when the months with unstable adjustments or changes are predominantly concentrated in a well-known problematic period that occurred several years ago or in one or two specific calendar months each year. These months are typically acknowledged by all data users as potentially troublesome, such as winter months in datasets known to be highly sensitive to variations in winter weather conditions. The sliding spans output is instrumental in identifying such concentrations, making it effortless to spot these patterns.
+Sometimes, the causes of high values in A(%) or MM(%) can be identified and determined to be relatively unproblematic.
+This is particularly true when the months with unstable adjustments or changes are predominantly concentrated in a well-known problematic period that occurred several years ago or in one or two specific calendar months each year.
+These months are typically acknowledged by all data users as potentially troublesome, such as winter months in datasets known to be highly sensitive to variations in winter weather conditions.
+The sliding spans output is instrumental in identifying such concentrations, making it effortless to spot these patterns.
 
 ```{r}
 m <- seas(AirPassengers, 
@@ -180,7 +188,8 @@ row.names(M2M) <- c("Number of months flagged", "Total number of months", "Perce
 colnames(M2M) <- "Month-to-Month Changes in SA Series"
 knitr::kable(M2M)
 ```
-Let's return to our example where we intentionally make a poor seasonal adjustment. 
+
+Let's return to our example where we intentionally make a poor seasonal adjustment.
 Now we need to take a log transform which will certainly improve the results from the prior run.
 
 ```{r}
@@ -196,7 +205,8 @@ row.names(M2M) <- c("Number of months flagged", "Total number of months", "Perce
 colnames(M2M) <- "Month-to-Month Changes in SA Series"
 knitr::kable(M2M)
 ```
-We see the A(%) value of 16.667 falls squarely in the problematic range. 
+
+We see the A(%) value of 16.667 falls squarely in the problematic range.
 If we were to lower the cutoff threshold we could expect to get even more values being flagged yielding a higher percentage.
 
 ```{r}
@@ -247,7 +257,3 @@ row.names(M2M) <- c("Number of months flagged", "Total number of months", "Perce
 colnames(M2M) <- c("old_sa", "auto_sa")
 knitr::kable(M2M, caption = "Month-to-Month Changes in SA Series")
 ```
-
-
-
-
