--- a/34-seasonal-breaks.qmd
+++ b/34-seasonal-breaks.qmd
@@ -6,6 +6,8 @@
 source("_common.R")
 status("drafting")  # drafting, polishing, complete
 ```
+
+```{=html}
 <!--
 -   Why to care about seasonal breaks?
 
@@ -14,10 +16,10 @@ status("drafting")  # drafting, polishing, complete
 -   Correction for seasonal breaks
 
  -->
-
-
-Some series have seasonal breaks. Apart from visual inspection of the unadjusted series, a look at monthplot() is usually helpful. If there are seasonal breaks, this leads to a jump in the SI ratio.
-
+```
+Some series have seasonal breaks.
+Apart from visual inspection of the unadjusted series, a look at monthplot() is usually helpful.
+If there are seasonal breaks, this leads to a jump in the SI ratio.
 
 ## Case Study: Imports of Goods to China
 
@@ -34,37 +36,41 @@ library(seasonal)
 ts_plot(imp_cn)
 ```
 
-
 The series has a very different seasonal pattern before 2000.
 In our previous example, we simply cut the data and focused on the later period.
-
 
 ```{r }
 ts_span(imp_cn, start = 2000)
 ```
 
-Back then, we said that adjusting the whole series in one step is possible, but for good results one should manually model the seasonal break. Let's do this now.
+Back then, we said that adjusting the whole series in one step is possible, but for good results one should manually model the seasonal break.
+Let's do this now.
 
 ### Identifying a seasonal break
 
-In part, the seasonal break is visible in the series. It is more straigthforward to spot in the monthplot of the series:
-
+In part, the seasonal break is visible in the series.
+It is more straigthforward to spot in the monthplot of the series:
 
 ```{r }
 monthplot(seas(imp_cn))
 ```
-This makes it obvious that there were very strong December effects before 2000. We don't know anything about the series, but we can speculate thatprior to 2000, custom receipts were counted when they were handed in (at the end of the year), rather than at the date of import.
+
+This makes it obvious that there were very strong December effects before 2000.
+We don't know anything about the series, but we can speculate thatprior to 2000, custom receipts were counted when they were handed in (at the end of the year), rather than at the date of import.
 
 ```{r }
-summary(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
+plot(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
 ```
 
-A formal test of a seasonal break can be performed by including `regression.variables = "seasonal/1999.jan//"` into the specification. By default, seasonal outliers are removed from the final series. Therefore, this can be used to model a seasonal break. Modeling a seasonal break is usually preferable to a separation of the time series in two parts.
-
+A formal test of a seasonal break can be performed by including `regression.variables = "seasonal/1999.jan//"` into the specification.
+By default, seasonal outliers are removed from the final series.
+Therefore, this can be used to model a seasonal break.
+Modeling a seasonal break is usually preferable to a separation of the time series in two parts.
 
 ### Restricting model span
 
-In many structural breaks, restricting `series.modelspan` may be the easiest way to deal with such series. Resticting the model span, uses only part of the series for model estimation, but applies seasonal adjustment to the whole series:
+In many structural breaks, restricting `series.modelspan` may be the easiest way to deal with such series.
+Resticting the model span, uses only part of the series for model estimation, but applies seasonal adjustment to the whole series:
 
 ```{r }
 
@@ -81,10 +87,11 @@ ts_plot(
 For some reason, this works better with X11 than with SEATS
 
 ```{r }
-ts_plot(
-  final(seas(imp_cn, series.modelspan = "2000.jan,", x11 = "")),
-  final(seas(ts_span(imp_cn, "2000-01"), x11 = ""))
+ts_dygraphs(
+  ts_c(
+    final(seas(imp_cn, series.modelspan = "2000.jan,", x11 = "")),
+    final(seas(ts_span(imp_cn, "2000-01"), x11 = "")),
+    final(seas(imp_cn, regression.variables = "seasonal/2000.jan//"))
+  )
 )
 ```
-
-
