--- a/23-regARIMA.qmd
+++ b/23-regARIMA.qmd
@@ -44,7 +44,7 @@ Once a satisfiying regARIMA has been found, one proceeds to the seasonal adjustm
 The regARIMA model also includes exogenous information or regressors, like holiday effects, additive outliers, and level shifts. These elements help in forecasting and analyzing the series. For example, regARIMA modeling can answer if a series is affected by trading day effects or how outliers impact results. It's also used to integrate external regression variables such as moving holidays and trading day effects into the analysis.
 
 
-## ARIMA model overview
+## ARIMA Basics
 
 The regARIMA model combines two elements: **reg**ression and **ARIMA**. The ARIMA segment itself is composed of a differencing order (the "I", for "integrated") and the ARMA part. This chapter aims to simplify these concepts without getting too technical, providing enough understanding for effective seasonal adjustment.
 
@@ -73,35 +73,32 @@ and uses the current and one lagged error term.[^ma_q]
 An ARMA(p, q) model combines these AR and MA components, using $p$ lagged values of the series and $q$ lagged error terms. In practice, X13's automatic modeling usually finds appropriate $p$ and $q$ values. However, it worth paying attention to correctly set the differencing and regression variables for seasonal adjustment.
 
 
-
 ## Differencing
 
-ARMA models work best for stationary time series.
-This means the mean does not depend on time (such as increasing trend) or have a correlation structure that changes.
-Many techniques could be used to take a non-stationary time series and transform it to stationarity, one ubiquitous method is differencing.
-There is a famous results that states if you difference your series $k$ times it will remove a polynomial trend of degree $k$.
-Essentially, if you observe a time series with a linear trend then first differencing will remove the trend.
-If a time series has quadratic trend (polynomial of order 2) then differencing twice will remove that trend.
-A similar phenomenon can happen at seasonal lags and often a time series will also require seasonal differencing to reduce it to stationary.
-The order of differencing, also called the intgreation order, for the non-seaosnal and seasonal parts of our model are usually notated as $d$ and $D$ respectively.
-When we bring the integration order together with the stocastic model specification we have the notation $$\text{SARIMA}\underbrace{(p, d, q)}_{\text{non-seasonal }}\underbrace{(P, D, Q)}_{\text{seasonal}}.$$ This can be seen easily with an example.
-Consider the log transformed `AirPassengers` series.
+ARMA models are most effective with stationary time series, where both the mean and correlation structure do not vary over time.
+For non-stationary time series, transforming them into stationary ones is essential, and differencing is a widely used method for this purpose. It is known that differencing a series $k$ times can remove a polynomial trend of degree $k$. Therefore, first differencing is effective for a series with a linear trend, while second differencing works for a series with a quadratic trend.
+
+Seasonal patterns might also require seasonal differencing to achieve stationarity. The orders of differencing for the non-seasonal and seasonal parts are denoted as $d$ and $D$, respectively. Combining these with the stochastic model specification gives the notation SARIMA(p, d, q)(P, D, Q), where $p$, $d$, $q$ are non-seasonal parameters, and $P$, $D$, $Q$ are seasonal.[^s_in_arima]:
+
+[^s_in_arima]: The "S" in SARIMA stands for seasonal. Since most of the ARIMA models within X-13 are seasonal, we will restrain from using the term and usueally refer to an ARIMA model of the structure (p, d, q)(P, D, Q).
+
+$$\text{SARIMA}\underbrace{(p, d, q)}_{\text{non-seasonal }}\underbrace{(P, D, Q)}_{\text{seasonal}}.$$
+
+Let's apply this to `AirPassengers`. A log-transformed version of the series looks as follows:
 
 ```{r}
 plot(log(AirPassengers))
 ```
 
-We see a clear increasing trend and seasonal pattern.
-Let's call the observed series $X_t$.
-We can difference the series to make $Y_t = \Delta X_t = X_t - X_{t-1}$.
-A plot of $Y_t$ looks like
+This series exhibits a clear increasing trend and seasonal pattern. Let's call the log-transformed series $X_t$.
+We can now difference the series to make $Y_t = \Delta X_t = X_t - X_{t-1}$.
+Which looks like:
 
 ```{r}
 plot(diff(log(AirPassengers)))
 ```
 
-The trend has been removed however some seasonal trend (strong seasonal patterns) still exist.
-Apply seasonal differencing to the already first differenced series $Y_t$:
+The trend is removed, but some seasonal patterns remain. Seasonal differencing is then applied to the already first differenced series $Y_t$:
 
 $$ Z_t = Y_t - Y_{t-12} $$
 
@@ -111,9 +108,12 @@ A plot of $Z_t$:
 plot(diff(diff(log(AirPassengers)), 12))
 ```
 
-Here we can see that both the original linear trend and seasonal pattern are removed and what is left is a stationary process that can adequately be modeled with an SARMA(0, 1)(0, 1) model.
-When you bring in the integration (differencing) order of one for the seasonal and non-seasonal components, we are left with the model named after this exact time series!
-The so called \`\`airline model'' is the SARIMA(0, 1, 1)(0, 1, 1) and the terminology came to popularity via Box and Jenkins, "Time Series Analysis, Forecasting and Control" textbook.
+Now, both the linear trend and seasonal patterns are removed, leaving a stationary process suitable for modeling with an (0, 0, 1)(0, 0, 1) ARIMA model. When the differencing order for both seasonal and non-seasonal components is included, the model becomes (0, 1, 1)(0, 1, 1), often called the "airline model" after Box and Jenkins' work.[^airline]
+
+[^airline]: The "airline model," or the ARIMA(0, 1, 1)(0, 1, 1) model, was popularized by @box1970time through their influential work in the field of time series analysis. This model is often associated with their seminal book "Time Series Analysis: Forecasting and Control." First published in 1970, this book has been a foundational text in the field of time series analysis. The airline model, named for its application in modeling airline passenger data, exemplifies the application of Seasonal ARIMA modeling in practical scenarios.
+
+
+
 
 ## Fitting SARIMA (optional)
 
