--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,11 @@
+@book{box1970time,
+  title={Time Series Analysis: Forecasting and Control},
+  author={Box, George E. P. and Jenkins, Gwilym M.},
+  year={1970},
+  publisher={Holden-Day},
+  address={San Francisco}
+}
+
 @article{planas02,
   title={Controlling Revisions in Arima-Model-Based Seasonal Adjustment},
   author={Planas, Christophe and Depoutot, Raoul},
